--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@contentful/rich-text-react-renderer": "14.1.1",
     "classnames": "2.2.6",
     "date-fns": "2.14.0",
-    "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "next": "^10.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
